tests/ui/imports/import-loop-2.stderr
error: cannot determine resolution for the import
  --> $DIR/import-loop-2.rs:2:13
   |
LL |     pub use crate::b::x;
   |             ^^^^^^^^^^^

error: cannot determine resolution for the import
  --> $DIR/import-loop-2.rs:7:13
   |
LL |     pub use crate::a::x;
   |             ^^^^^^^^^^^

error[E0432]: unresolved import `crate::b::x`
  --> $DIR/import-loop-2.rs:2:13
   |
LL |     pub use crate::b::x;
   |             ^^^^^^^^^^^ no `x` in `b`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
